--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
+# Ignore data files
 projects/Movie-Recommender-System/similarity.pkl
 08-Practical-Deep-Learning-With-Pytorch/code/fmnist_full.csv
+
+# Ignore virtual environments
+venv/
+
+# Ignore editor settings
+.vscode/
+.idea/
+
+# Ignore system files
+.DS_Store
+
+# Ignore Jupyter and Python cache
+.ipynb_checkpoints/
+.pytest_cache/
+.mypy_cache/
+.coverage
