--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ venv/
 ./data
 10-Projects-Based-ML-DL/01-Image-Classification(guess_the_footballer_by_eyes)/eye_dataset
 10-Projects-Based-ML-DL/01-Image-Classification(guess_the_footballer_by_eyes)/raw_images
+yolov5s.pt
