--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ yolov5s.pt
 10-Projects-Based-ML-DL/02-Natural-Language-Processing/data/movie-corpus/speakers.json
 10-Projects-Based-ML-DL/02-Natural-Language-Processing/data/movie-corpus/utterances.jsonl
 10-Projects-Based-ML-DL/02-Natural-Language-Processing/data/movie-corpus/index.json
+11-Foundations-Of-LLMS/GPT-From-Scratch/model_5000.pth
