--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ yolov5s.pt
 10-Projects-Based-ML-DL/02-Natural-Language-Processing/data/movie-corpus/utterances.jsonl
 10-Projects-Based-ML-DL/02-Natural-Language-Processing/data/movie-corpus/index.json
 11-Foundations-Of-LLMS/GPT-From-Scratch/model_5000.pth
+
+10-Projects-Based-ML-DL/03-Image-Captioning/data/*
