--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ yolov5s.pt
 10-Projects-Based-ML-DL/03-Image-Captioning/vocabulary.pkl
 10-Projects-Based-ML-DL/03-Image-Captioning/valid_image_features.pkl
 10-Projects-Based-ML-DL/03-Image-Captioning/train_image_features.pkl
+10-Projects-Based-ML-DL/03-Image-Captioning/best_decoder.pth
