--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ yolov5s.pt
 10-Projects-Based-ML-DL/03-Image-Captioning/valid_image_features.pkl
 10-Projects-Based-ML-DL/03-Image-Captioning/train_image_features.pkl
 10-Projects-Based-ML-DL/03-Image-Captioning/best_decoder.pth
+10-Projects-Based-ML-DL/03-Image-Captioning/model02.pth
