--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ yolov5s.pt
 11-Foundations-Of-LLMS/code/gpt2/*
 
 11-Foundations-Of-LLMS/code/4.66
+12-Learn-NLP-By-Building-Sentiment-Analysis-System/data/cleaned_imdb.csv
+12-Learn-NLP-By-Building-Sentiment-Analysis-System/data/IMDB Dataset.csv
