chore: day151 langchain models

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ yolov5s.pt
 10-Projects-Based-ML-DL/04-Sentiment-Analysis/glove.6B.zip
 10-Projects-Based-ML-DL/04-Sentiment-Analysis/data/IMDB Dataset.csv
 10-Projects-Based-ML-DL/04-Sentiment-Analysis/data/cleaned_imdb.csv
+.env
