--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ yolov5s.pt
 10-Projects-Based-ML-DL/04-Sentiment-Analysis/data/cleaned_imdb.csv
 .env
 requirements.txt
+
+
+14-Agentic-AI/code/extras
