chore: day200 training LunarLander

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ projects/Movie-Recommender-System/similarity.pkl
 08-Practical-Deep-Learning-With-Pytorch/code/fmnist_full.csv
 
 # Ignore virtual environments
+rlenv/
 venv/
 
 # Ignore editor settings
